--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -16,7 +16,6 @@
     <div id="viewPlaceHolder"> @Html.Partial("_Events", Model)</div>
     <div>
 
-        <input type="text" name="daterange" value="01/01/2015 - 01/31/2015" />
         <hr />
         <script type="text/javascript">
 
@@ -27,12 +26,14 @@
                 var end = moment().add(1, 'year');
 
                 function cb(start, end) {
-                    $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+                    $('#reportrange span').html(start.format('D MMMM, YYYY') + ' - ' + end.format('D MMMM, YYYY'));
                 }
 
-                $('#reportrange').daterangepicker({
+                $('#reportrange').daterangepicker({ 
                     startDate: start,
                     endDate: end,
+                    dateFormat: 'dd/mm/yyyy',
+                    opens : 'left',
                     ranges: {
                         'Today': [moment(), moment()],
                         'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
@@ -44,6 +45,7 @@
                 }, cb);
 
                 cb(start, end);
+               
 
             });
             var picker = $('#reportrange').daterangepicker();
@@ -51,6 +53,7 @@
             $(document).ready(function(){
                 var cityfield = document.getElementById('City');
                 var namefield = document.getElementById('name');
+                var date = document.getElementById('reportrange');
                 var id = $("#city").val();
                 var data = JSON.stringify({
                     'id': $("#city").val(),
@@ -73,6 +76,7 @@
                 }
                 cityfield.addEventListener('input', ajax);
                 namefield.addEventListener('input', ajax);
+                $('#reportrange').on('apply.daterangepicker', ajax);
             })
         </script>
         </div>
