--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -7,17 +7,7 @@
     <meta charset="utf-8" />
     <title>ZoMoMo - Home </title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <!-- Include Required Prerequisites -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
-
-    <!-- Include Date Range Picker -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
 
 
 </head>
@@ -31,7 +21,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">ZoMoMo</a>
+                    <a class="navbar-brand" href="../">ZoMoMo</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     @Html.Partial("_LoginPartial")
@@ -46,7 +36,7 @@
                             </div>
 
                             <script type="text/javascript">
-                                jQuery(document).ready(function ($) {
+                                $(function () {
 
                                     var start = moment().subtract(29, 'days');
                                     var end = moment();
