--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -1,7 +1,9 @@
 ﻿@model WebApplication1.Models.EventCreateViewModel
+
 @{
     ViewBag.Title = "Create Event";
 }
+
 @using (Html.BeginForm("FileUpload", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <hr />
@@ -21,6 +23,32 @@
             <div class="col-md-10">
                 @Html.EditorFor(m => m.EventDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.EventDescription, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.TagName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10" id="tags">
+
+                @Html.EditorFor(m => m.TagName, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.ValidationMessageFor(m => m.TagName, "", new { @class = "text-danger" })
+                <script type="text/javascript">
+                    $(function () {
+                        $('#TagName').tagsinput({
+                            itemValue: 'value',
+                            itemText: 'text',
+                            typeahead: {
+                                source: function (query) {
+                                    return $.getJSON('cities.json');
+                                }
+                            }
+                        });
+                        $('#TagName').tagsinput('add', { "value": 1, "text": "Amsterdam" });
+                        $('#TagName').tagsinput('add', { "value": 4, "text": "Washington" });
+                        $('#TagName').tagsinput('add', { "value": 7, "text": "Sydney" });
+                        $('#TagName').tagsinput('add', { "value": 10, "text": "Beijing" });
+                        $('#TagName').tagsinput('add', { "value": 13, "text": "Cairo" });
+                    })
+                </script>
             </div>
         </div>
         <div class="form-group">
@@ -55,7 +83,7 @@
         <div class="form-group">
             @Html.LabelFor(m => m.EventLocation, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.EditorFor(m => m.EventLocation, new { htmlAttributes = new { @class = "form-control", id="Location" } })
+                @Html.EditorFor(m => m.EventLocation, new { htmlAttributes = new { @class = "form-control", id = "Location" } })
                 @Html.ValidationMessageFor(m => m.EventLocation, "", new { })
             </div>
         </div>
@@ -84,19 +112,19 @@
         @Html.ActionLink("Back to Homepage", "Index")
     </div>
 }
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk&libraries=places"></script>
-    <script type="text/javascript">
-        var input = document.getElementById('Location');
 
-        google.maps.event.addDomListener(input, 'keydown', function (e) {
-            if (e.keyCode == 13) {
-                e.preventDefault();
-            }
-        });
-        google.maps.event.addDomListener(window, 'load', function () {
-            var places = new google.maps.places.Autocomplete(input);
-        });
-    </script>
+@*@Scripts.Render("~/bundles/jquery");
+@Scripts.Render("~/bundles/bootstrap");*@
+<script type="text/javascript">
+    var input = document.getElementById('Location');
+
+    google.maps.event.addDomListener(input, 'keydown', function (e) {
+        if (e.keyCode == 13) {
+            e.preventDefault();
+        }
+    });
+    google.maps.event.addDomListener(window, 'load', function () {
+        var places = new google.maps.places.Autocomplete(input);
+    })
+</script>
 }
