--- a/WebApplication1/WebApplication1/Views/Home/_events.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_events.cshtml
@@ -37,7 +37,7 @@
                                 </h4>
                                 <p style="margin-bottom:5px">@Html.DisplayFor(ModelItem => item.EventLocation)</p>
                                 <span>
-                                    @Html.DisplayFor(ModelItem => item.EventBeginDate.Value.Day)/@Html.DisplayFor(ModelItem => item.EventBeginDate.Value.Month)/@Html.DisplayFor(ModelItem => item.EventBeginDate.Value.Year)
+                                    @Html.DisplayFor(ModelItem => item.EventBeginDate.Day)/@Html.DisplayFor(ModelItem => item.EventBeginDate.Month)/@Html.DisplayFor(ModelItem => item.EventBeginDate.Year)
                                 </span>
                                 -
                                 <span>
