--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -83,9 +83,14 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk"></script>
     <script type="text/javascript">
+        google.maps.event.addDomListener(input, 'keydown', function (e) {
+            if (e.keyCode == 13) {
+                e.preventDefault();
+            }
+        });
         google.maps.event.addDomListener(window, 'load', function () {
             var input = document.getElementById('Hometown');
-            var places = new google.maps.places.Autocomplete(input);
+            var places = new google.maps.places.Autocomplete(input)
         });
     </script>
 
