--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -35,12 +35,13 @@
                     dateFormat: 'dd/mm/yyyy',
                     opens : 'left',
                     ranges: {
+                        'Future': [moment(), moment().add(100, 'years')],
                         'Today': [moment(), moment()],
-                        'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-                        'Last 7 Days': [moment().subtract(6, 'days'), moment()],
-                        'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                        'This Week': [moment(), moment().add(7, 'days')],
                         'This Month': [moment().startOf('month'), moment().endOf('month')],
-                        'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+                        'All': [moment().subtract(100, 'years'), moment().add(100, 'years')],
+                        'Past': [moment().subtract(100, 'years'), moment()]
+                        
                     }
                 }, cb);
 
