--- a/WebApplication1/WebApplication1/Views/Account/ForgotPassword.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/ForgotPassword.cshtml
@@ -5,6 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
+<div style="margin-top:50px">
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -23,7 +24,7 @@
         </div>
     </div>
 }
-
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
