--- a/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
@@ -10,10 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="margin-top:50px">
 
 
-    <div class="container-fluid" style="margin-top:100px">
+    <div class="container-fluid" style="margin-top:50px">
         <ul class="nav nav-tabs">
             <li><a href="#" class="profileBut">Profile</a></li>
             <li><a href="#" class="madeBut">Events Made</a></li>
@@ -45,7 +45,7 @@
                 <p>You find here underneath all your history of Events organised by you. Click on the Event name to display the event page.</p>
                 @if (ViewBag.EventsMade == null)
                     {
-                    <p> No events history to display. Sorry you have no life.</p>
+                    <p> No events history to display. Sorry, you have no life.</p>
                     }
                     else
                     {
@@ -62,7 +62,7 @@
                             @foreach (Event e in ViewBag.EventsMade)
                                 {
                                 <tr class="warning">
-                                    <td>@Html.ActionLink(e.EventName, "Register", "Account") </td>
+                                    <td>@Html.ActionLink(e.EventName, "ViewEvent", "Event", new { id = e.EventId}, null) </td>
                                     <td>@e.EventEndDate </td>
                                     <td>@e.EventParticipants </td>
                                     <td>@e.EventLocation</td>
@@ -78,7 +78,7 @@
                 <p>You find here underneath all your history of Events you participated to. Click on the Event name to display the event page.</p>
                 @if (ViewBag.EventsParticipated == null)
                     {
-                    <p> No events history to display. Sorry you have no life.</p>
+                    <p> No events history to display. Sorry, you have no life.</p>
                     }
                     else
                     {
@@ -96,7 +96,7 @@
                             @foreach (Event e in ViewBag.EventsParticipated)
                                 {
                                 <tr class="warning">
-                                    <td>@Html.ActionLink(e.EventName, "Register", "Account") </td>
+                                    <td>@Html.ActionLink(e.EventName,"ViewEvent", "Event", new { id = e.EventId }, null) </td>
                                     <td>@e.EventEndDate </td>
                                     <td>@e.EventParticipants </td>
                                     <td>@e.EventLocation</td>
