--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -43,13 +43,13 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.EditorFor(m => m.Hometown, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(m => m.Hometown, "", new { })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(m => m.birthday, new { @class = "col-md-2 control-label" })
