--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="Home/Index">ZoMoMo</a>
+                    @Html.ActionLink("ZoMoMo", "Index", "Home", new { @class = "navbar-brand" })
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     @Html.Partial("_LoginPartial")
