--- a/WebApplication1/WebApplication1/Views/Home/_Event.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Event.cshtml
@@ -20,7 +20,7 @@
             </span>
             -
             <span>
-                @Html.DisplayFor(ModelItem => Model.ev.EventBeginTime.Value.TimeOfDay)
+                @Html.DisplayFor(ModelItem => Model.ev.EventBeginDate.TimeOfDay)
             </span>
 
         </div>
